# template_bind_app_cpp_python

./: .gitignore  CMakeLists.txt  README.md  pixi.toml  pyproject.toml
cmake/: dependencies-cli.cmake
config/: example.toml
debug/: main_debug.cpp
docs/: cross-platform.md  developer-guide.md  implementation-status.md  user-guide.md
include/commands/: commit.hpp  commit_config.hpp  fetch.hpp  fetch_config.hpp  log.hpp  log_config.hpp
include/config/: config_loader.hpp  config_manager.hpp  config_schema.hpp
scripts/: check_docstring.py
src/bindings/: nb_bindings.cpp
src/cli/: CMakeLists.txt  cli.cpp  main.cpp
src/config/: CMakeLists.txt  config_file_loader.cpp  config_file_loader.hpp  config_manager.cpp
src/core/: CMakeLists.txt
src/core/commands/: commit.cpp  fetch.cpp  log.cpp
src/template_bind_app_cpp_python/: __init__.py  cli.py
src/template_bind_cpp_python/: __init__.py  cli.py
tests/cpp/: CMakeLists.txt  test_commit.cpp  test_fetch.cpp  test_log.cpp
tests/python/: test_modules.py
